style et article costa

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
 <div id="container">
 	<div id="header">
-		<h1>
-			Site name
-		</h1>
+		<h1> LE CINEMA D'ANIMATION	</h1>
 	</div>
 <!--	<div id="navigation">
 		<ul>
@@ -38,11 +36,11 @@
 	
 	<div class="element">
 		<h2>
-			Article 1 !!
+			Monstre et cie !!
 		</h2>
-		<img src="ecu.jpg" alt="Ecureuil">
+		<img src="./germaine.JPG" alt="Ecureuil">
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			L'histoire se déroule à Monstropolis, une ville habitée par toutes sortes de créatures. Au cœur de la ville se situe l'usine de traitements de cris d'enfants, énergie nécessaire à la ville. Des monstres se rendent chaque jour chez des enfants par les portes de placard pour recueillir leurs précieux cris.
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
@@ -105,8 +103,8 @@
 
 
 	<div id="footer">
-		Copyright © Site name, 20XX
-	</div>
+		Copyright © GROUPE A 2017
+    </div>
 </div>
 </body>
 </html>
