ajout edito, nom dans naviguateur, et lien dans mon article

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
 		</h2>
 		<p>
 			Ici on parle du cinéma d'animation, bienvenue à tous les grands enfants et autres passionnés par le 7ème art ! Toute l'équipe du groupe A.
+            
 		</p>
+        L'image animée est une technique dont le but est de donner l'illusion à des spectateurs que des personnages ou des objets inanimés, sous la forme de dessins, peintures photographies, dossiers numériques, etc, sont doués de vie et peuvent ainsi bouger, se déplacer, avoir des mimiques, éventuellement parler... Elle est en fait l'inverse du procédé de décomposition photographique et de recomposition du mouvement, qu'est le cinéma. Elle compose le mouvement par une suite chronologique de représentations, le décompose en enregistrant chacune de ces représentations, et le recompose par le visionnement.
+        Quelles que soient les techniques utilisées, le principe est donc identique : le mouvement est représenté dans une succession d'images fixes que l'on enregistre — quel que soit le moyen d'acquisition employé — et dont la vision à une fréquence donnée donne l'illusion d'un mouvement continu.
+
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		</p>
+			
 		
 	</div>
 	
