modification de l'index

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 			Edito
 		</h2>
 		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			Pixar Animation Studios est une société américaine de production de films en images tridimensionnelles de synthèse. Son siège social nommé Pixar Campus est situé à Emeryville, en Californie. À ce jour, le studio d'animation a remporté vingt-deux Oscars du cinéma, quatre Golden Globes et trois Grammy Awards ainsi que de nombreuses autres récompenses. Le studio est surtout connu pour ses longs métrages d'animation en images de synthèse créés avec PhotoRealistic RenderMan, sa propre version de l'interface de programmation de rendu RenderMan utilisée pour créer des images de haute qualité.
+
 		</p>
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+Pixar a été créé en 1979 sous le nom de Graphics Group, un service de la Lucasfilm Computer Division (division informatique de Lucasfilm) avant d'être acheté par le cofondateur d'Apple, Steve Jobs, en 1985. La société a tenté de diversifier ses activités avec la production d'un ordinateur, le Pixar Image Computer. Mais c'est dans le domaine de l'animation que la société a été rentable avec des longs métrages coproduits avec Disney à partir de 1995. La société a été rachetée par The Walt Disney Company en 2006 et le studio est devenu une filiale de Walt Disney Pictures.
 		</p>
 		
 	</div>
@@ -94,10 +96,14 @@
 
 	<div class="element">
 		<h2>
-			Article 5 !!
+			1001 pattes
 		</h2>
+        <img src="1001pattes.jpg">
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+		1001 pattes est un film d'animation de Pixar Animation Studios. Il est réalisé par Andrew Stanton et John Lasseter sur une musique de Randy Newman. Le film dure 1h35.
+    Il est sorti en France le 10 février 1999. 
+
+Suite à la destruction par inadvertance des récoltes de la saison, une fourmilière est dans tous ses états. En effet, Le Borgne est une méchante sauterelle qui met main basse sur une partie des récoltes. Furieux d'apprendre qu'il ne recevra rien, Le Borgne annonce qu'il reviendra cet automne et s'accaparera du double de ration ! Tilt, une fourmi maladroite mais ambitieuse, décide alors d'aller chercher de l'aide en dehors de la fourmilière en vue de combattre la sauterelle racketteuse. Néanmoins, l'équipe de mercenaires qu'il a trouvé n'est autre qu'une troupe de cirque...
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
