Ajout de l'image et de l'article 4

--- a/index.html
+++ b/index.html
@@ -94,9 +94,16 @@ Pixar a été créé en 1979 sous le nom de Graphics Group, un service de la Luc
 			Article 4 !!
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Monstres et Cie (« Monstres et Compagnies) est un film d'animation des studios Pixar sortie en 2001. 
+
+Il met en scène une ville où des monstres travaillent dans une usine de traitements de cris d'enfants, qui est la source d'énergie de la ville. Ainsi, chaque jour des monstres se rendent chez des enfants par la porte de leur placard pour récolter leur cri de peur.
+On suit l'histoire de Sulli et Bob, 2 monstres réputés qui travaillent en duo. Un jour Sulli ouvre une porte abandonée et arrive dans la chambre d'une fillette, mais la chambre est vide ; à son retour il s'aperçoit que la fillette l'a suivi dans le monde des monstres. Sulli se prends d'affection pour elle et va tout tenter pour la ramener dans son monde, tandis que l'autorité de la ville essaie de récupérer l'enfant.
+
+A mon sens, Monstres et Cie et l'un des meilleurs Pixar réalisés.
+            br>
+            <img src="metco.jpg"/>
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://fr.wikipedia.org/wiki/Monstres_et_Cie"> Wikipédia</a>
 		</h3>
 	</div>
 
