--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
 	</div>
 	<div class="element">
 		<h2>
-			Article 3 !!
+			Nemo !!
 		</h2>
+        <img src="nemo.jpg">
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Dans les eaux tropicales de la Grande Barrière de corail, un poisson-clown du nom de Marin mène une existence paisible avec son fils unique, Nemo. Redoutant l'océan et ses risques imprévisibles, il fait de son mieux pour protéger son fils. Comme tous les petits poissons de son âge, celui-ci rêve pourtant d'explorer les mystérieux récifs.
+Lorsque Nemo disparaît, Marin devient malgré lui le héros d'une quête unique et palpitante. 
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=29057.html">AlloCiné</a>
 		</h3>
 	</div>
     
