Ajout article Antoine

--- a/Pixar.html
+++ b/Pixar.html
@@ -119,9 +119,15 @@ Lorsque Nemo disparaît, Marin devient malgré lui le héros d'une quête unique
 			Article 4 !! (Antoine)
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			L'histoire se déroule à Monstropolis, une ville habitée par toutes sortes de créatures. Au cœur de la ville se situe l'usine de traitements de cris d'enfants, énergie nécessaire à la ville. Des monstres se rendent chaque jour chez des enfants par les portes de placard pour recueillir leurs précieux cris.
+
+Jacques Sullivan (dit Sulli) est, aux yeux de tous les habitants de Monstropolis, une vraie « terreur d'élite ». Assisté de Robert Razowski (alias Bob), un drôle de mini-cyclope vert, Sulli n'a pas son pareil pour horrifier les bambins. Ce grand monstre sait comme personne pétrifier et tétaniser sans jamais toucher, puisque tout contact physique avec un enfant humain serait mortel. Mais les temps sont durs pour le duo de terreur : les enfants ne hurlent plus aussi facilement qu'avant et la ville est au bord de la crise d'énergie.
+
+Un jour, alors qu’il s’occupe de papiers pour leur manager Germaine, Sulli trouve une porte de placard restée seule dans l’usine déserte. Alors qu’il entre dans la chambre, il découvre qu’elle est vide, et s’aperçoit bientôt que la fillette qui y habite l’a suivi dans le monde des monstres. Alors que Sulli est terrorisé par la petite, car il croit que les enfants humains sont toxiques, celle-ci n’est pas du tout effrayée par le monstre et le surnomme aussitôt « Minou ».
+        <br>
+            <img src="metco.jpg" />
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://fr.wikipedia.org/wiki/Monstres_et_Cie">Wikipédia</a>
 		</h3>
 	</div>
 
