--- a/Pixar.html
+++ b/Pixar.html
@@ -116,7 +116,7 @@ Lorsque Nemo disparaît, Marin devient malgré lui le héros d'une quête unique
 	
 	<div class="element">
 		<h2>
-			Article 4 !! (Antoine)
+			Monstres Academy
 		</h2>
 		<p>
 			L'histoire se déroule à Monstropolis, une ville habitée par toutes sortes de créatures. Au cœur de la ville se situe l'usine de traitements de cris d'enfants, énergie nécessaire à la ville. Des monstres se rendent chaque jour chez des enfants par les portes de placard pour recueillir leurs précieux cris.
